<resources>
    <string name="app_name">Mission6</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="manage_customer">고객 관리</string>
    <string name="manage_income">매출 관리</string>
    <string name="manage_item">상품 관리</string>
    <string name="to_menu">메뉴로</string>
    <string name="to_login">로그인으로</string>
</resources>
