<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mission6.MenuActivity">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/horizontal_center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/manage_customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_customer" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/manage_income_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/manage_income" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/manage_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/manage_item" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
